# slop-detector

./: README.md  pyproject.toml
src/slop_detector/: __init__.py  aggregator.py  analyzer.py  cli.py  file_classifier.py  models.py  repo_analyzer.py  reporter.py
src/slop_detector/detectors/: __init__.py  commit_analyzer.py  definitive_detector.py  heuristic_detector.py  ml_detector.py  statistical_detector.py
